Fix all config page in dark mode

--- a/_sass/layouts/guides.scss
+++ b/_sass/layouts/guides.scss
@@ -1,8 +1,3 @@
-
-.guides-configuration-reference {
-  background: $white;
-}
-
 div.guides,
 div.guides-configuration-reference {
   padding-bottom: 6rem;
@@ -105,11 +100,11 @@ div.guides-configuration-reference {
       align-self: start;
     }
   }
-  
+
   .guide-categories {
     margin: 0 1rem 0 0;
 
-    h3 { 
+    h3 {
     margin: 0;
 
     }
